--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,6 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>19</maven.compiler.source>
         <maven.compiler.target>19</maven.compiler.target>
-        <exec.mainClass>com.ertu.proje3.OthelloLogin</exec.mainClass>
+        <exec.mainClass>com.ertu.proje3.ErtugrulErgulOthelloLogin</exec.mainClass>
     </properties>
 </project>
